# projects-backend

./: .dockerignore  .env.exemple  .env.sample  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .snyk  .trivyignore  Dockerfile  Dockerfile.keycloak  Makefile  README.md  _tests_report_387.txt  docker-compose-tests.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  secrets-entrypoint.sh  tests.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-keycloak-image.yml  ci.yml  lint-and-test-workflow.yml  manual-algolia-workflow.yml  scan-image-workflow.yml
apps/accounts/: admin.py  apps.py  authentication.py  exceptions.py  exports.py  factories.py  filters.py  middlewares.py  models.py  parsers.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0002_skill_projectuser_birthdate_projectuser_location_and_more.py  0003_initial.py  0003_peoplegroup_tags.py  0003_projectuser_pronouns.py  0004_auto_20220410_0513.py  0004_peoplegrouplocation.py  0004_peoplegrouplocation_peoplegroup_location.py  0004_projectuser_embedding_projectuser_embedding_summary.py  0004_projectuser_generated_summary_and_more.py  0005_userscore.py  (+90 more)
apps/analytics/: exceptions.py  factories.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/announcements/: factories.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/commons/: admin.py  cache.py  context.py  enums.py  exceptions.py  factories.py  fields.py  filters.py  mixins.py  models.py  pagination.py  permissions.py  queryset.py  routers.py  serializers.py  swagger.py  test.py  urls.py  utils.py  views.py
apps/deploys/: admin.py  apps.py  models.py  signals.py  task_managers.py  tasks.py  utils.py
apps/emailing/: admin.py  apps.py  models.py  tasks.py  translation.py  urls.py  utils.py  views.py
apps/feedbacks/: exceptions.py  factories.py  filters.py  models.py  permissions.py  serializers.py  views.py
apps/files/: admin.py  enums.py  exceptions.py  factories.py  models.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
apps/goals/: factories.py  models.py  serializers.py  views.py
apps/healthcheck/: urls.py  views.py
apps/invitations/: exceptions.py  factories.py  filters.py  models.py  serializers.py  tasks.py  views.py
apps/misc/: api.py  factories.py  filters.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/modules/: __init__.py  base.py  group.py  models.py  project.py  serializers.py  tab.py
apps/news/: factories.py  models.py  serializer.py  serializers.py  urls.py  views.py
apps/newsfeed/: admin.py  apps.py  exceptions.py  factories.py  filters.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/notifications/: admin.py  apps.py  factories.py  models.py  serializers.py  signals.py  tasks.py  translation.py  urls.py  utils.py  views.py
apps/organizations/: admin.py  apps.py  exceptions.py  exports.py  factories.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/projects/: admin.py  apps.py  exceptions.py  exports.py  factories.py  filters.py  models.py  permissions.py  recommendations.py  serializers.py  signals.py  tasks.py  translation.py  urls.py  utils.py  views.py
apps/search/: apps.py  documents.py  filters.py  index.py  interface.py  models.py  pagination.py  recommend.py  serializers.py  signals.py  tasks.py  testcases.py  urls.py  utils.py  views.py
apps/skills/: admin.py  exceptions.py  factories.py  filters.py  models.py  pagination.py  serializers.py  tasks.py  testcases.py  translation.py  urls.py  utils.py  views.py
apps/utils/: admin.py
assets/styles/: admin.css
k8s/projects-back/: secrets.dev.yaml  secrets.prod.yaml  values.dev-stan.yaml  values.dev.yaml  values.staging.yaml
k8s/projects-backend/: Chart.yaml  README.md  local.test.yaml  restore-from-latest-prod-backup.yaml  secrets.dev.yaml  secrets.prod.yaml  secrets.staging.yaml  standalone-backend-example.yaml  values.dev-e2e.yaml  values.dev-stan.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
keycloak/: entrypoint.sh  realm-export.json
load-testing/: README.md  locust.conf  locustfile.py  requirements.txt
projects/: __init__.py  admin.py  asgi.py  celery.py  middlewares.py  schema.py  storage.py  urls.py  wsgi.py
projects/settings/: base.py  develop.py  fullstack.py  local.py  production.py  staging.py  test.py
scripts/: backup.sh  create_db.sh  drop_db.sh  duplicate.sh  restore.sh  set_env.sh  storage.sh  update_students_groups.py
services/crisalid/: admin.py  apps.py  celery.py  crisalid_bus.py  crisalid_event.py  factories.py  interface.py  manager.py  models.py  populate.py  relators.py  serializers.py  signals.py  taks.py  tasks.py  urls.py  utils.py  views.py
services/esco/: apps.py  factories.py  filters.py  interface.py  models.py  serializers.py  tasks.py  testcases.py  translation.py  urls.py  utils.py  views.py
services/google/: admin.py  apps.py  exceptions.py  factories.py  interface.py  mocks.py  models.py  serializers.py  tasks.py  testcases.py  urls.py  utils.py  views.py
services/keycloak/: admin.py  apps.py  exceptions.py  factories.py  interface.py  models.py  serializers.py  tasks.py
services/mistral/: admin.py  apps.py  exceptions.py  factories.py  interface.py  models.py  query.py  recommend.py  signals.py  tasks.py  testcases.py  urls.py  views.py
services/mixpanel/: admin.py  apps.py  factories.py  interface.py  models.py  tasks.py
services/recsys/: apps.py  interface.py
services/translator/: apps.py  interface.py  mixins.py  models.py  serializers.py  tasks.py  testcases.py  utils.py
services/wikimedia/: apps.py  interface.py
services/wikipedia/: apps.py  exceptions.py  interface.py  pagination.py  serializers.py  urls.py  views.py
sops/: .sops.yaml  README.md  generate.py  human-usable.sops.yaml  update_keys.sh
templates/admin/: base.html
(+861 files in other folders)
