[project]
name = "projects"
version = "2.0.1"
description = "Learning Planet Institute Projects backend"
authors = [{ name = "LPI IT team", email = "it-team@learningplanetinstitute.org" }]
requires-python = ">=3.13,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.42.39,<2",
    "bs4>=0.0.2,<0.0.3",
    "celery[redis]>=5.2.1,<6",
    "cryptography>=46.0.6,<47",
    "Django>=6.0.4,<7",
    "django-cleanup>=9.0.0,<10",
    "django-cors-headers>=4.9.0,<5",
    "django-extensions>=4.1.0,<5",
    "django-filter>=25.2,<26",
    "django-mjml[requests]>=1.1,<2",
    "django-modeltranslation>=0.20.2,<0.21",
    "django-redis>=6.0.0,<7",
    "django-simple-history>=3.11.0,<4",
    "django-stdimage>=6.0.2,<7",
    "django-storages[azure]>=1.11.1,<2",
    "djangorestframework>=3.15.2,<4",
    "djangorestframework-simplejwt>=5.5.1,<6",
    "drf-recaptcha>=4.0.3,<5",
    "drf-spectacular>=0.25.1,<0.26",
    "google>=3.0.0,<4",
    "google-api-python-client>=2.192.0,<3",
    "google-auth-httplib2>=0.3.0,<0.4",
    "google-auth-oauthlib>=1.3.0,<2",
    "gunicorn>=25.1.0,<26",
    "Pillow>=12.1.1,<13",
    "psycopg2>=2.9.10,<3",
    "python-keycloak>=7.1.1,<8",
    "redis>=6.4.0,<7",
    "serializers>=0.2.4,<0.3",
    "shortuuid>=1.0.1,<2",
    "single-source>=0.4.0,<0.5",
    "whitenoise[brotli]>=6.0.0,<7",
    "babel>=2.18.0,<3",
    "mixpanel-utils>=2.2.5,<3",
    "django-guardian>=3.3.0,<4",
    "djangorestframework-guardian>=0.4.0,<0.5",
    "ipython>=9.11.0,<10",
    "parameterized>=0.9.0,<0.10",
    "django-prometheus>=2.3.1,<3",
    "pymediawiki>=0.7.4,<0.8",
    "pgvector>=0.4.2,<0.5",
    "mistralai>=2.1.2,<3",
    "setuptools>=82.0.0,<83",
    "django-debug-toolbar>=6.2.0,<7",
    "uvicorn>=0.42.0,<0.43",
    "django-opensearch-dsl>=0.6.2,<0.7",
    "django-import-export>=4.4.0,<5",
    "azure-ai-translation-text>=1.0.1,<2",
    "django-jazzmin>=3.0.1,<4",
    "pika>=1.3.2,<2",
    "gql[all]>=4.0.0,<5",
    "jsonschema>=4.25.1,<5",
    "lxml>=6.0.2,<7",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.13,<8",
    "dj-inmemorystorage>=2.1.0,<3",
    "factory-boy>=3.2.0,<4",
    "pytest>=9.0.2,<10",
    "pytest-django>=4.12.0,<5",
    "tblib>=3.2.2,<4",
    "toml>=0.10.2,<0.11",
    "urllib3>=2.6.2,<3",
    "django-slowtests>=1.1.1,<2",
    "pytest-xdist[psutil]>=3.8.0,<4",
    "ruff>=0.15.9",
    "pre-commit>=4.5.1",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
extend-exclude = [
    "__pycache__",
    ".venv",
    "venv",
    "**/migrations/*.py",
    "./devops-toolbox/**/*.py",
    "./keycloak-lpi-theme/**/*.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "A", "ERA", "PIE", "RET", "SIM", "N", "DJ", "I"]
ignore = [
    "DJ001",  # Avoid using `null=True` on string-based fields such as `CharField`
    "DJ007",  # Do not use `__all__` with `ModelForm`, use `fields` instead
    "DJ008",  # Model does not define __str__ method.
    "E221",  # Multiple spaces before operator
    "E226",  # Missing whitespace around arithmetic operator
    "E231",  # Missing whitespace after operator
    "E501",  # Line too long
    "E702",  # Multiple statements on one line
    "N818",  # Exception name should be named with an Error suffix
    "PIE790",  # Unnecessary `pass` can be removed.
    "PIE800",  # no-unnecessary-spread: Consider inlining the dict values.
    "S101",  # Use of assert in code
    "S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes.
    "W505",  # Doc line too long
]

[tool.ruff.lint.per-file-ignores]
"**/models.py" = ["A003"]
"**/views.py" = ["A003"]
"**/serializers.py" = ["A003"]
"**/factories.py" = ["A003"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["apps"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
  "./venv/*",
  "*tests*",
  "*apps.py",
  "*manage.py",
  "*__init__.py",
  "*migrations*",
  "*asgi*",
  "*wsgi*",
  "*admin.py",
  "*urls.py",
  "./devops-toolbox/*",
]
